src/robu/log/build_2023-11-07_11-52-53/robu/stderr.log
  File "/home/robu/work/robu_ct_ws/src/robu/install/robu/lib/python3.10/site-packages/robu/ex10_wallfollower.py", line 4
    import std_msgs.msg import String
                        ^^^^^^
SyntaxError: invalid syntax

